--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+$primary-color: crimson;
+$secondary-color: rgb(255, 141, 141);
+$background-color: rgb(239 239 239);
+
+body {
+  margin: 0;
+  background-color: $background-color;
+  font-family: "Quicksand", sans-serif;
+}
+
+h1 {
+  font-family: "Quicksand", sans-serif;
+}
