create table checkpoint

--- a/src/app/views/category/area/area.component.html
+++ b/src/app/views/category/area/area.component.html
@@ -1,4 +1,10 @@
 <div class="container-fluid">
   <h1>Area</h1>
-  <p>area works!</p>
+
+  <p>Area data from Subur Database</p>
+  <app-table
+    [columnHeaders]="column"
+    [data]="data"
+    [useCheckBox]="true"
+    (onSingleChecked)="onCheckedChange($event)" />
 </div>
