--- a/src/app/views/category/area/area.component.scss
+++ b/src/app/views/category/area/area.component.scss
@@ -1,7 +1,12 @@
+@import "../../../../styles.scss";
+
 .container-fluid {
   background-color: white;
   padding: 20px;
   border-radius: 10px;
+  max-height: 95vh;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -9,4 +14,22 @@ h1 {
   padding-bottom: 10px;
   margin-bottom: 15px;
   border-bottom: 2px solid #bbb;
+}
+
+table tbody {
+  display: block;
+  max-height: 205px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+table thead,
+table tbody tr {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+}
+
+table thead {
+  width: calc(100% - $scroll-bar-width);
 }
