adding drop down

--- a/src/app/global-component/card-menu/card-menu.component.scss
+++ b/src/app/global-component/card-menu/card-menu.component.scss
@@ -24,11 +24,11 @@ h3 {
 }
 
 p {
-  display: -webkit-box;
-  -webkit-line-clamp: 4;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  display: -webkit-box !important;
+  -webkit-line-clamp: 4 !important;
+  -webkit-box-orient: vertical !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
   cursor: default;
   color: grey;
   line-height: 1.25;
