--- a/src/app/views/category/area/area.component.html
+++ b/src/app/views/category/area/area.component.html
@@ -2,10 +2,30 @@
   <h1>Area</h1>
 
   <p>Area data from Subur Database</p>
+
+  <div class="d-flex flex-row align-items-center mb-3 branch-container">
+    <div class="d-flex flex-row align-items-center branch">
+      <label>From Branch : </label>
+      <app-drop-down
+        class="ms-3"
+        (selectedValueChange)="onBranchChange($event)"
+        [dropDownList]="branchList" />
+    </div>
+
+    <div class="d-flex flex-row align-items-center ms-3 branch">
+      <label>To Branch : </label>
+      <app-drop-down
+        class="ms-3"
+        (selectedValueChange)="onDestinationBranchChange($event)"
+        [dropDownList]="branchList" />
+    </div>
+
+    <button type="button" class="btn btn-success ms-3">Sync</button>
+  </div>
   <app-table
     [columnHeaders]="column"
-    [data]="data"
     [useCheckBox]="false"
     (onSingleChecked)="onCheckedChange($event)"
+    [data]="data"
     [(selectedData)]="selectedData" />
 </div>
