--- a/src/app/global-component/table/table.component.html
+++ b/src/app/global-component/table/table.component.html
@@ -31,19 +31,10 @@
   <div class="paginator d-flex align-items-center justify-content-between mx-4">
     <div class="page-size-container">
       <label for="page-size">Data per page:</label>
-
-      <select
-        id="page-size"
-        class="ms-3 px-2 py-1"
-        aria-label="Small select example"
-        (change)="onPageSizeChange($event)">
-        <option
-          value="{{ item }}"
-          *ngFor="let item of pageSizeList"
-          [attr.selected]="item === pageSize ? 'selected' : null">
-          {{ item }}
-        </option>
-      </select>
+      <app-drop-down
+        class="ms-3"
+        (selectedValueChange)="onPageSizeChange($event)"
+        [dropDownList]="pageSizeList" />
     </div>
 
     <div class="ms-3 page-range d-flex align-items-center">
