--- a/src/app/views/category/bank/bank.component.html
+++ b/src/app/views/category/bank/bank.component.html
@@ -1,1 +1,24 @@
-<p>bank works!</p>
+<div class="container-fluid">
+  <h1>Bank</h1>
+
+  <p>Bank data from Subur Database</p>
+  <div class="d-flex flex-row align-items-center mb-3 branch-container">
+    <div class="d-flex flex-row align-items-center branch">
+      <label>From Branch : </label>
+      <app-drop-down
+        class="ms-3"
+        (selectedValueChange)="onBranchChange($event)"
+        [dropDownList]="branchList" />
+    </div>
+
+    <div class="d-flex flex-row align-items-center ms-3 branch">
+      <label>To Branch : </label>
+      <app-drop-down
+        class="ms-3"
+        (selectedValueChange)="onDestinationBranchChange($event)"
+        [dropDownList]="branchList" />
+    </div>
+
+    <button type="button" class="btn btn-success ms-3">Sync</button>
+  </div>
+</div>
