--- a/src/app/global-component/drop-down/drop-down.component.html
+++ b/src/app/global-component/drop-down/drop-down.component.html
@@ -1,4 +1,4 @@
-<select [(ngModel)]="selectedValue" class="dropdown">
+<select [(ngModel)]="selectedValue" class="form-select form-select-sm">
   <option *ngFor="let item of dropDownList" [ngValue]="item">
     {{ item.value }}
   </option>
