--- a/src/app/views/category/area/area.component.html
+++ b/src/app/views/category/area/area.component.html
@@ -20,7 +20,7 @@
         [dropDownList]="branchList" />
     </div>
 
-    <button type="button" class="btn btn-success ms-3">Sync</button>
+    <button type="button" class="btn btn-success ms-3 px-4">Sync</button>
   </div>
   <app-table
     [columnHeaders]="column"
