--- a/src/app/global-component/table/table.component.scss
+++ b/src/app/global-component/table/table.component.scss
@@ -6,7 +6,7 @@ table {
 
 table tbody {
   display: block;
-  max-height: 205px;
+  // max-height: 205px;
   overflow-y: scroll;
   overflow-x: hidden;
 }
