--- a/src/app/views/category/bank/bank.component.html
+++ b/src/app/views/category/bank/bank.component.html
@@ -19,6 +19,6 @@
         [dropDownList]="branchList" />
     </div>
 
-    <button type="button" class="btn btn-success ms-3">Sync</button>
+    <button type="button" class="btn btn-success ms-3 px-4">Sync</button>
   </div>
 </div>
