--- a/src/app/views/category/bank/bank.component.html
+++ b/src/app/views/category/bank/bank.component.html
@@ -21,4 +21,10 @@
 
     <button type="button" class="btn btn-success ms-3 px-4">Sync</button>
   </div>
+  <app-table
+    [columnHeaders]="column"
+    [useCheckBox]="false"
+    (onSingleChecked)="onCheckedChange($event)"
+    [data]="data"
+    [(selectedData)]="selectedData" />
 </div>
