--- a/src/app/global-component/table/table.component.scss
+++ b/src/app/global-component/table/table.component.scss
@@ -68,6 +68,11 @@ table thead {
   font-size: 14px;
 }
 
+.img {
+  max-width: 100%;
+  max-height: 80px;
+}
+
 @media only screen and (max-width: 768px) {
   .paginator {
     flex-direction: column-reverse;
