--- a/src/app/global-component/table/table.component.html
+++ b/src/app/global-component/table/table.component.html
@@ -13,7 +13,7 @@
         </th>
       </tr>
     </thead>
-    <tbody class="scrollable-body">
+    <tbody>
       <tr *ngFor="let item of displayedData">
         <td class="check-box" *ngIf="useCheckBox">
           <input
