--- a/src/app/global-component/table/table.component.scss
+++ b/src/app/global-component/table/table.component.scss
@@ -22,6 +22,12 @@ table thead {
   width: calc(100% - $scroll-bar-width);
 }
 
+td,
+th {
+  vertical-align: middle;
+  text-align: center;
+}
+
 .check-box {
   width: 30px;
 }
