--- a/src/app/views/category/area/area.component.html
+++ b/src/app/views/category/area/area.component.html
@@ -24,7 +24,7 @@
   </div>
   <app-table
     [columnHeaders]="column"
-    [useCheckBox]="false"
+    [useCheckBox]="true"
     (onSingleChecked)="onCheckedChange($event)"
     [data]="data"
     [(selectedData)]="selectedData" />
