--- a/src/app/views/category/area/area.component.scss
+++ b/src/app/views/category/area/area.component.scss
@@ -18,7 +18,7 @@ h1 {
 
 table tbody {
   display: block;
-  max-height: 205px;
+  // max-height: 205px;
   overflow-y: scroll;
   overflow-x: hidden;
 }
