--- a/src/app/views/category/bank/bank.component.html
+++ b/src/app/views/category/bank/bank.component.html
@@ -23,7 +23,7 @@
   </div>
   <app-table
     [columnHeaders]="column"
-    [useCheckBox]="true"
+    [useCheckBox]="false"
     (onSingleChecked)="onCheckedChange($event)"
     [data]="data"
     [(selectedData)]="selectedData" />
