--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,3 +52,6 @@ h1 {
   overflow-y: auto;
   overflow-x: hidden;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
