ui complete still need business logic

--- a/src/app/views/category/bank/bank.component.html
+++ b/src/app/views/category/bank/bank.component.html
@@ -18,10 +18,19 @@
         <mat-option value="item" *ngFor="let item of branchList">{{ item.value }}</mat-option>
       </mat-select>
     </mat-form-field>
-    <button mat-raised-button color="primary" style="margin-bottom: 22px" class="ms-3">
+    <button
+      mat-raised-button
+      color="primary"
+      style="margin-bottom: 22px"
+      class="ms-3"
+      [disabled]="selectedBranch == null || branchDestination == null">
       Submit
     </button>
   </div>
+
+  <mat-slide-toggle class="mb-4" [(ngModel)]="useCheckbox" (change)="onSlideChange()"
+    >Use Checkbox ?</mat-slide-toggle
+  >
 
   <div class="mat-elevation-z3">
     <table mat-table [dataSource]="dataSource">
