--- a/src/app/views/category/customer/customer.component.html
+++ b/src/app/views/category/customer/customer.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
-  <h1>Business Partner</h1>
+  <h1>Customer</h1>
 
-  <p>Area data from Subur Database</p>
+  <p>Customer data from Subur Database</p>
 
   <div class="d-flex flex-row align-items-center">
     <mat-form-field>
@@ -18,10 +18,19 @@
         <mat-option value="item" *ngFor="let item of branchList">{{ item.value }}</mat-option>
       </mat-select>
     </mat-form-field>
-    <button mat-raised-button color="primary" style="margin-bottom: 22px" class="ms-3">
+    <button
+      mat-raised-button
+      color="primary"
+      style="margin-bottom: 22px"
+      class="ms-3"
+      [disabled]="selectedBranch == null || branchDestination == null">
       Submit
     </button>
   </div>
+
+  <mat-slide-toggle class="mb-4" [(ngModel)]="useCheckbox" (change)="onSlideChange()"
+    >Use Checkbox ?</mat-slide-toggle
+  >
 
   <div class="mat-elevation-z3">
     <table mat-table [dataSource]="dataSource">
