--- a/src/app/views/category/manufacturer/manufacturer.component.html
+++ b/src/app/views/category/manufacturer/manufacturer.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
-  <h1>Area</h1>
+  <h1>Manufacturer</h1>
 
-  <p>Area data from Subur Database</p>
+  <p>Manufacturer Data from Subur Database</p>
 
   <div class="d-flex flex-row align-items-center">
     <mat-form-field>
@@ -51,13 +51,6 @@
         </td>
       </ng-container>
 
-      <!-- Code Column -->
-      <ng-container matColumnDef="code">
-        <th mat-header-cell *matHeaderCellDef>Code</th>
-        <td mat-cell *matCellDef="let element">{{ element.code }}</td>
-      </ng-container>
-
-      <!-- Name Column -->
       <ng-container matColumnDef="description">
         <th mat-header-cell *matHeaderCellDef>Description</th>
         <td mat-cell *matCellDef="let element">{{ element.description }}</td>
