--- a/src/app/views/category/menu/menu.component.html
+++ b/src/app/views/category/menu/menu.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
-  <h1>Area</h1>
+  <h1>Menu</h1>
 
-  <p>Area data from Subur Database</p>
+  <p>Menu Data from Subur Database</p>
 
   <div class="d-flex flex-row align-items-center">
     <mat-form-field>
@@ -51,16 +51,39 @@
         </td>
       </ng-container>
 
-      <!-- Code Column -->
       <ng-container matColumnDef="code">
         <th mat-header-cell *matHeaderCellDef>Code</th>
         <td mat-cell *matCellDef="let element">{{ element.code }}</td>
       </ng-container>
 
-      <!-- Name Column -->
       <ng-container matColumnDef="description">
         <th mat-header-cell *matHeaderCellDef>Description</th>
         <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="menuOrder">
+        <th mat-header-cell *matHeaderCellDef>Menu Order</th>
+        <td mat-cell *matCellDef="let element">{{ element.menuOrder }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="isActive">
+        <th mat-header-cell *matHeaderCellDef>Active</th>
+        <td mat-cell *matCellDef="let element">{{ element.isActive }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="formName">
+        <th mat-header-cell *matHeaderCellDef>Form Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.formName }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="formCaption">
+        <th mat-header-cell *matHeaderCellDef>Form Caption</th>
+        <td mat-cell *matCellDef="let element">{{ element.formCaption }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="branch">
+        <th mat-header-cell *matHeaderCellDef>Branch</th>
+        <td mat-cell *matCellDef="let element">{{ element.branch.description }}</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
