--- a/src/app/views/category/role/role.component.html
+++ b/src/app/views/category/role/role.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
-  <h1>Area</h1>
+  <h1>Role</h1>
 
-  <p>Area data from Subur Database</p>
+  <p>Role Data from Subur Database</p>
 
   <div class="d-flex flex-row align-items-center">
     <mat-form-field>
@@ -51,16 +51,9 @@
         </td>
       </ng-container>
 
-      <!-- Code Column -->
-      <ng-container matColumnDef="code">
-        <th mat-header-cell *matHeaderCellDef>Code</th>
-        <td mat-cell *matCellDef="let element">{{ element.code }}</td>
-      </ng-container>
-
-      <!-- Name Column -->
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef>Description</th>
-        <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
