--- a/src/app/views/category/warehouse-bin/warehouse-bin.component.html
+++ b/src/app/views/category/warehouse-bin/warehouse-bin.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
-  <h1>Area</h1>
+  <h1>Warehouse Bin</h1>
 
-  <p>Area data from Subur Database</p>
+  <p>Warehouse Bin Data from Subur Database</p>
 
   <div class="d-flex flex-row align-items-center">
     <mat-form-field>
@@ -51,16 +51,29 @@
         </td>
       </ng-container>
 
-      <!-- Code Column -->
-      <ng-container matColumnDef="code">
-        <th mat-header-cell *matHeaderCellDef>Code</th>
-        <td mat-cell *matCellDef="let element">{{ element.code }}</td>
+      <ng-container matColumnDef="l1">
+        <th mat-header-cell *matHeaderCellDef>L1</th>
+        <td mat-cell *matCellDef="let element">{{ element.l1 }}</td>
       </ng-container>
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef>Description</th>
-        <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+      <ng-container matColumnDef="l2">
+        <th mat-header-cell *matHeaderCellDef>L2</th>
+        <td mat-cell *matCellDef="let element">{{ element.l2 }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="l3">
+        <th mat-header-cell *matHeaderCellDef>L3</th>
+        <td mat-cell *matCellDef="let element">{{ element.l3 }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="isDefault">
+        <th mat-header-cell *matHeaderCellDef>Is Default</th>
+        <td mat-cell *matCellDef="let element">{{ element.isDefault }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="warehouseModel">
+        <th mat-header-cell *matHeaderCellDef>Warehouse</th>
+        <td mat-cell *matCellDef="let element">{{ element.warehouseModel.branch.description }}</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
