--- a/src/app/global-component/drawer/drawer.component.html
+++ b/src/app/global-component/drawer/drawer.component.html
@@ -39,6 +39,7 @@
   </div>
 
   <button
+    (click)="authService.logout()"
     [ngClass]="{
       'drawer-icon-container': menuVisiblity == false,
       'drawer-icon-container-show': menuVisiblity == true
