--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,1 +1,28 @@
-<p>login works!</p>
+<div class="login-container">
+  <mat-card style="width: 40%">
+    <mat-card-content>
+      <h1 style="text-align: center">Login</h1>
+      <form class="login-form">
+        <mat-form-field class="full-width">
+          <mat-label>Username</mat-label>
+          <input
+            matInput
+            placeholder="Enter your username"
+            name="username"
+            [(ngModel)]="username" />
+        </mat-form-field>
+        <mat-form-field class="full-width">
+          <mat-label>Password</mat-label>
+          <input
+            matInput
+            placeholder="Enter your Password "
+            type="password"
+            name="password"
+            [(ngModel)]="password" />
+        </mat-form-field>
+
+        <button mat-raised-button color="primary full-width" (click)="login()">Primary</button>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div>
