--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -21,7 +21,7 @@
             [(ngModel)]="password" />
         </mat-form-field>
 
-        <button mat-raised-button color="warn full-width" (click)="login()">Primary</button>
+        <button mat-raised-button color="warn" class="full-width" (click)="login()">Primary</button>
       </form>
     </mat-card-content>
   </mat-card>
