--- a/src/app/views/category/area/area.component.html
+++ b/src/app/views/category/area/area.component.html
@@ -1,67 +1,52 @@
-<div class="container-fluid">
+<div class="card flex justify-content-center p-2">
   <h1>Area</h1>
 
   <p>Area data from Subur Database</p>
 
-  <div class="d-flex flex-row align-items-center">
-    <button mat-raised-button color="primary" style="margin-bottom: 22px" (click)="loadData()">
-      Load Data
-    </button>
-    <button
-      mat-raised-button
-      color="primary"
-      style="margin-bottom: 22px"
-      class="ms-3"
-      [disabled]="buttonDisabled"
-      (click)="confirmDialog()">
-      Submit
-    </button>
+  <div class="d-flex flex-row align-items-center mb-2">
+    <p-button label="Load Data" (onClick)="loadData()" severity="success" class="me-2"></p-button>
+    <p-toast></p-toast>
+    <p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
+    <p-button label="Submit" (onClick)="confirmDialog()"></p-button>
   </div>
 
-  <mat-slide-toggle class="mb-4" [(ngModel)]="useCheckbox" (change)="onSlideChange()"
-    >Use Checkbox ?</mat-slide-toggle
-  >
+  <div class="d-flex flex-row align-items-center mb-2">
+    <p-inputSwitch
+      [(ngModel)]="useCheckbox"
+      ariaLabelledBy="switch2"
+      class="d-flex"></p-inputSwitch>
+    <label class="ms-2" id="switch2">Use Checkbox?</label>
+  </div>
 
-  <div class="mat-elevation-z3">
-    <table mat-table [dataSource]="dataSource">
-      <ng-container matColumnDef="select">
-        <th mat-header-cell *matHeaderCellDef style="width: 50px">
-          <mat-checkbox
-            [(ngModel)]="checkAll"
-            (change)="$event ? toggleAllRows() : null"
-            [checked]="selectedData.hasValue() && isAllSelected()"
-            [indeterminate]="selectedData.hasValue() && !isAllSelected()">
-          </mat-checkbox>
+  <p-table
+    [value]="dataSource"
+    [(selection)]="selectedData"
+    (selectAllChange)="selectAllChange()"
+    (selectionChange)="selectChange()"
+    dataKey="code"
+    [paginator]="true"
+    [rows]="5"
+    [showCurrentPageReport]="true"
+    [tableStyle]="{ 'min-width': '50rem' }"
+    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+    [rowsPerPageOptions]="[5, 10, 20]">
+    <ng-template pTemplate="header">
+      <tr>
+        <th style="width: 4rem" *ngIf="useCheckbox">
+          <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
         </th>
-        <td mat-cell *matCellDef="let row">
-          <mat-checkbox
-            (click)="$event.stopPropagation()"
-            (change)="toggleRow($event, row)"
-            [checked]="selectedData.isSelected(row)">
-          </mat-checkbox>
+        <th style="width: 50%">Code</th>
+        <th style="width: 50%">Description</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-area>
+      <tr>
+        <td *ngIf="useCheckbox">
+          <p-tableCheckbox [value]="area"></p-tableCheckbox>
         </td>
-      </ng-container>
-
-      <!-- Code Column -->
-      <ng-container matColumnDef="code">
-        <th mat-header-cell *matHeaderCellDef>Code</th>
-        <td mat-cell *matCellDef="let element">{{ element.code }}</td>
-      </ng-container>
-
-      <!-- Name Column -->
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef>Description</th>
-        <td mat-cell *matCellDef="let element">{{ element.description }}</td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-
-    <mat-paginator
-      [pageSizeOptions]="[5, 10, 20]"
-      showFirstLastButtons
-      aria-label="Select page of periodic elements">
-    </mat-paginator>
-  </div>
+        <td>{{ area.code }}</td>
+        <td>{{ area.description }}</td>
+      </tr>
+    </ng-template>
+  </p-table>
 </div>
