--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,35 +1,36 @@
 <div class="login-container">
-  <mat-card style="width: 40%">
-    <mat-card-content>
-      <h1 style="text-align: center">Login</h1>
-      <form class="login-form">
-        <mat-form-field class="full-width">
-          <mat-label>Username</mat-label>
-          <input
-            matInput
-            placeholder="Enter your username"
-            name="username"
-            [(ngModel)]="username" />
-        </mat-form-field>
-        <mat-form-field class="full-width">
-          <mat-label>Password</mat-label>
-          <input
-            matInput
-            placeholder="Enter your Password "
-            type="password"
-            name="password"
-            [(ngModel)]="password" />
-        </mat-form-field>
+  <div class="card flex justify-content-center p-2">
+    <h1 style="text-align: center" class="mb-3">Login</h1>
+    <div class="d-flex flex-column">
+      <div class="d-flex flex-column mb-3">
+        <label for="username">Username</label>
+        <input
+          class="p-inputtext-sm"
+          pInputText
+          id="username"
+          aria-describedby="username-help"
+          [(ngModel)]="username" />
+      </div>
+      <div class="d-flex flex-column mb-3">
+        <label for="passwrod">Password</label>
+        <input
+          class="p-inputtext-sm"
+          pPassword
+          type="password"
+          id="password"
+          aria-describedby="password-help"
+          [(ngModel)]="password"
+          [feedback]="false" />
+      </div>
 
-        <p-toast></p-toast>
-        <button
-          mat-raised-button
-          color="warn"
-          class="full-width"
-          (click)="login(this.username, this.password)">
-          Submit
-        </button>
-      </form>
-    </mat-card-content>
-  </mat-card>
+      <p-toast></p-toast>
+      <button
+        pButton
+        pRipple
+        class="p-button-success button"
+        (click)="login(this.username, this.password)">
+        Submit
+      </button>
+    </div>
+  </div>
 </div>
