--- a/src/app/views/login/login.component.scss
+++ b/src/app/views/login/login.component.scss
@@ -1,3 +1,5 @@
+@import "../../../styles.scss";
+
 .login-container {
   display: flex;
   justify-content: center;
@@ -8,4 +10,17 @@
 
 .full-width {
   width: 100%;
+}
+
+.card {
+  width: 50%;
+  background: white;
+  padding: 30px;
+  border-radius: 12px;
+}
+
+.button {
+  background-color: $primary-color;
+  display: flex;
+  justify-content: center;
 }
