--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,107 @@ $secondary-color: rgb(255, 141, 141);
 $background-color: rgb(239 239 239);
 $scroll-bar-width: 8px;
 
+.d-flex {
+  display: flex !important;
+}
+
+.flex-row {
+  flex-direction: row !important;
+}
+.flex-column {
+  flex-direction: column !important;
+}
+
+.align-items-center {
+  align-items: center !important;
+}
+
+.p-1 {
+  padding: 5px;
+}
+.p-2 {
+  padding: 10px;
+}
+.p-3 {
+  padding: 15px;
+}
+
+.m-1 {
+  margin: 5px;
+}
+.m-2 {
+  margin: 10px;
+}
+.m-3 {
+  margin: 15px;
+}
+
+.mb-1 {
+  margin-bottom: 5px;
+}
+.mb-2 {
+  margin-bottom: 10px;
+}
+.mb-3 {
+  margin-bottom: 15px;
+}
+
+.mt-1 {
+  margin-top: 5px;
+}
+.mt-2 {
+  margin-top: 10px;
+}
+.mt-3 {
+  margin-top: 15px;
+}
+
+.ms-1 {
+  margin-left: 5px;
+}
+.ms-2 {
+  margin-left: 10px;
+}
+.ms-3 {
+  margin-left: 15px;
+}
+
+.me-1 {
+  margin-right: 5px;
+}
+.me-2 {
+  margin-right: 10px;
+}
+.me-3 {
+  margin-right: 15px;
+}
+
+.mx-1 {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.mx-2 {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.mx-3 {
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.my-1 {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.my-2 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.my-3 {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
 body {
   margin: 0;
   background-color: $background-color;
@@ -23,6 +124,7 @@ body {
 }
 
 h1 {
+  margin: 0;
   font-family: "Quicksand", sans-serif;
 }
 
