--- a/src/app/views/category/area/area.component.html
+++ b/src/app/views/category/area/area.component.html
@@ -1,4 +1,4 @@
-<div class="card flex justify-content-center p-2">
+<div class="card flex justify-content-center p-3">
   <h1>Area</h1>
 
   <p>Area data from Subur Database</p>
@@ -7,29 +7,31 @@
     <p-button label="Load Data" (onClick)="loadData()" severity="success" class="me-2"></p-button>
     <p-toast></p-toast>
     <p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
-    <p-button label="Submit" (onClick)="confirmDialog()"></p-button>
+    <p-button label="Submit" (onClick)="confirmDialog()" [disabled]="buttonDisabled"></p-button>
   </div>
 
   <div class="d-flex flex-row align-items-center mb-2">
     <p-inputSwitch
       [(ngModel)]="useCheckbox"
-      ariaLabelledBy="switch2"
+      (onChange)="checkBoxChange()"
+      ariaLabelledBy="chckbox"
       class="d-flex"></p-inputSwitch>
-    <label class="ms-2" id="switch2">Use Checkbox?</label>
+    <label class="ms-2" id="chckbox">Use Checkbox?</label>
   </div>
 
   <p-table
     [value]="dataSource"
     [(selection)]="selectedData"
+    (onHeaderCheckboxToggle)="selectAllChange()"
     (selectAllChange)="selectAllChange()"
     (selectionChange)="selectChange()"
     dataKey="code"
     [paginator]="true"
-    [rows]="5"
+    [rows]="10"
     [showCurrentPageReport]="true"
     [tableStyle]="{ 'min-width': '50rem' }"
     currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-    [rowsPerPageOptions]="[5, 10, 20]">
+    [rowsPerPageOptions]="[10, 20, 30, 50, 80, 100]">
     <ng-template pTemplate="header">
       <tr>
         <th style="width: 4rem" *ngIf="useCheckbox">
