--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,81 +40,265 @@ $scroll-bar-width: 8px;
 .p-5 {
   padding: 3rem !important;
 }
+.px-0 {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
+.px-1 {
+  padding-left: 0.25rem !important;
+  padding-right: 0.25rem !important;
+}
+.px-2 {
+  padding-left: 0.5rem !important;
+  padding-right: 0.5rem !important;
+}
+.px-3 {
+  padding-left: 1rem !important;
+  padding-right: 1rem !important;
+}
+.px-4 {
+  padding-left: 1.5rem !important;
+  padding-right: 1.5rem !important;
+}
+.px-5 {
+  padding-left: 3rem !important;
+  padding-right: 3rem !important;
+}
+.py-0 {
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+}
+.py-1 {
+  padding-top: 0.25rem !important;
+  padding-bottom: 0.25rem !important;
+}
+.py-2 {
+  padding-top: 0.5rem !important;
+  padding-bottom: 0.5rem !important;
+}
+.py-3 {
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
+}
+.py-4 {
+  padding-top: 1.5rem !important;
+  padding-bottom: 1.5rem !important;
+}
+.py-5 {
+  padding-top: 3rem !important;
+  padding-bottom: 3rem !important;
+}
+.ps-0 {
+  padding-left: 0 !important;
+}
+.ps-1 {
+  padding-left: 0.25rem !important;
+}
+.ps-2 {
+  padding-left: 0.5rem !important;
+}
+.ps-3 {
+  padding-left: 1rem !important;
+}
+.ps-4 {
+  padding-left: 1.5rem !important;
+}
+.ps-5 {
+  padding-left: 3rem !important;
+}
+.pe-0 {
+  padding-left: 0 !important;
+}
+.pe-1 {
+  padding-left: 0.25rem !important;
+}
+.pe-2 {
+  padding-left: 0.5rem !important;
+}
+.pe-3 {
+  padding-left: 1rem !important;
+}
+.pe-4 {
+  padding-left: 1.5rem !important;
+}
+.pe-5 {
+  padding-left: 3rem !important;
+}
+.pt-0 {
+  padding-top: 0 !important;
+}
+.pt-1 {
+  padding-top: 0.25rem !important;
+}
+.pt-2 {
+  padding-top: 0.5rem !important;
+}
+.pt-3 {
+  padding-top: 1rem !important;
+}
+.pt-4 {
+  padding-top: 1.5rem !important;
+}
+.pt-5 {
+  padding-top: 3rem !important;
+}
+.pb-0 {
+  padding-bottom: 0 !important;
+}
+.pb-1 {
+  padding-bottom: 0.25rem !important;
+}
+.pb-2 {
+  padding-bottom: 0.5rem !important;
+}
+.pb-3 {
+  padding-bottom: 1rem !important;
+}
+.pb-4 {
+  padding-bottom: 1.5rem !important;
+}
+.pb-5 {
+  padding-bottom: 3rem !important;
+}
 
+.m-0 {
+  margin: 0 !important;
+}
 .m-1 {
-  margin: 5px;
+  margin: 0.25rem !important;
 }
 .m-2 {
-  margin: 10px;
+  margin: 0.5rem !important;
 }
 .m-3 {
-  margin: 15px;
+  margin: 1rem !important;
 }
-
-.mb-1 {
-  margin-bottom: 5px;
+.m-4 {
+  margin: 1.5rem !important;
 }
-.mb-2 {
-  margin-bottom: 10px;
+.m-5 {
+  margin: 3rem !important;
 }
-.mb-3 {
-  margin-bottom: 15px;
+.mx-0 {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
 }
-
-.mt-1 {
-  margin-top: 5px;
-}
-.mt-2 {
-  margin-top: 10px;
-}
-.mt-3 {
-  margin-top: 15px;
-}
-
-.ms-1 {
-  margin-left: 5px;
-}
-.ms-2 {
-  margin-left: 10px;
-}
-.ms-3 {
-  margin-left: 15px;
-}
-
-.me-1 {
-  margin-right: 5px;
-}
-.me-2 {
-  margin-right: 10px;
-}
-.me-3 {
-  margin-right: 15px;
-}
-
 .mx-1 {
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: 0.25rem !important;
+  margin-right: 0.25rem !important;
 }
 .mx-2 {
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 0.5rem !important;
+  margin-right: 0.5rem !important;
 }
 .mx-3 {
-  margin-left: 15px;
-  margin-right: 15px;
+  margin-left: 1rem !important;
+  margin-right: 1rem !important;
 }
-
+.mx-4 {
+  margin-left: 1.5rem !important;
+  margin-right: 1.5rem !important;
+}
+.mx-5 {
+  margin-left: 3rem !important;
+  margin-right: 3rem !important;
+}
+.my-0 {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+}
 .my-1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-top: 0.25rem !important;
+  margin-bottom: 0.25rem !important;
 }
 .my-2 {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 0.5rem !important;
+  margin-bottom: 0.5rem !important;
 }
 .my-3 {
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: 1rem !important;
+  margin-bottom: 1rem !important;
+}
+.my-4 {
+  margin-top: 1.5rem !important;
+  margin-bottom: 1.5rem !important;
+}
+.my-5 {
+  margin-top: 3rem !important;
+  margin-bottom: 3rem !important;
+}
+
+.mt-0 {
+  margin-top: 0 !important;
+}
+.mt-1 {
+  margin-top: 0.25rem !important;
+}
+.mt-2 {
+  margin-top: 0.5rem !important;
+}
+.mt-3 {
+  margin-top: 1rem !important;
+}
+.mt-4 {
+  margin-top: 1.5rem !important;
+}
+.mt-5 {
+  margin-top: 3rem !important;
+}
+.mb-0 {
+  margin-bottom: 0 !important;
+}
+.mb-1 {
+  margin-bottom: 0.25rem !important;
+}
+.mb-2 {
+  margin-bottom: 0.5rem !important;
+}
+.mb-3 {
+  margin-bottom: 1rem !important;
+}
+.mb-4 {
+  margin-bottom: 1.5rem !important;
+}
+.mb-5 {
+  margin-bottom: 3rem !important;
+}
+.ms-0 {
+  margin-left: 0 !important;
+}
+.ms-1 {
+  margin-left: 0.25rem !important;
+}
+.ms-2 {
+  margin-left: 0.5rem !important;
+}
+.ms-3 {
+  margin-left: 1rem !important;
+}
+.ms-4 {
+  margin-left: 1.5rem !important;
+}
+.ms-5 {
+  margin-left: 3rem !important;
+}
+.me-0 {
+  margin-right: 0 !important;
+}
+.me-1 {
+  margin-right: 0.25rem !important;
+}
+.me-2 {
+  margin-right: 0.5rem !important;
+}
+.me-3 {
+  margin-right: 1rem !important;
+}
+.me-4 {
+  margin-right: 1.5rem !important;
+}
+.me-5 {
+  margin-right: 3rem !important;
 }
 
 body {
