--- a/src/app/views/category/bank/bank.component.html
+++ b/src/app/views/category/bank/bank.component.html
@@ -1,100 +1,54 @@
-<div class="container-fluid">
+<div class="card flex justify-content-center flex-column p-3">
   <h1>Bank</h1>
 
   <p>Bank data from Subur Database</p>
 
-  <div class="d-flex flex-row align-items-center">
-    <mat-form-field>
-      <mat-label>Source Branch</mat-label>
-      <mat-select [(value)]="selectedBranch">
-        <mat-option>None</mat-option>
-        <mat-option value="item" *ngFor="let item of branchList">{{ item.value }}</mat-option>
-      </mat-select>
-    </mat-form-field>
-    <mat-form-field class="ms-3">
-      <mat-label>Destination Branch</mat-label>
-      <mat-select [(value)]="branchDestination">
-        <mat-option>None</mat-option>
-        <mat-option value="item" *ngFor="let item of branchList">{{ item.value }}</mat-option>
-      </mat-select>
-    </mat-form-field>
-    <button
-      mat-raised-button
-      color="primary"
-      style="margin-bottom: 22px"
-      class="ms-3"
-      [disabled]="selectedBranch == null || branchDestination == null">
-      Submit
-    </button>
+  <div class="d-flex flex-row align-items-center mb-2">
+    <p-button label="Load Data" (onClick)="loadData()" severity="success" class="me-2"></p-button>
+    <p-toast></p-toast>
+    <p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
+    <p-button label="Submit" (onClick)="confirmDialog()" [disabled]="buttonDisabled"></p-button>
   </div>
 
-  <mat-slide-toggle class="mb-4" [(ngModel)]="useCheckbox" (change)="onSlideChange()"
-    >Use Checkbox ?</mat-slide-toggle
-  >
-
-  <div class="mat-elevation-z3">
-    <table mat-table [dataSource]="dataSource">
-      <ng-container matColumnDef="select">
-        <th mat-header-cell *matHeaderCellDef>
-          <mat-checkbox
-            (change)="$event ? toggleAllRows() : null"
-            [checked]="selectedData.hasValue() && isAllSelected()"
-            [indeterminate]="selectedData.hasValue() && !isAllSelected()">
-          </mat-checkbox>
+  <p-table
+    [loading]="loading"
+    [value]="dataSource"
+    [(selection)]="selectedData"
+    (onHeaderCheckboxToggle)="selectAllChange()"
+    (selectAllChange)="selectAllChange()"
+    (selectionChange)="selectChange()"
+    dataKey="accountNo"
+    [paginator]="true"
+    [rows]="10"
+    [showCurrentPageReport]="true"
+    [tableStyle]="{ 'min-width': '50rem' }"
+    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+    [rowsPerPageOptions]="[10, 20, 30, 50, 80, 100]">
+    <ng-template pTemplate="header">
+      <tr>
+        <th style="width: 4rem" *ngIf="useCheckbox">
+          <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
         </th>
-        <td mat-cell *matCellDef="let row">
-          <mat-checkbox
-            (click)="$event.stopPropagation()"
-            (change)="toggleRow($event, row)"
-            [checked]="selectedData.isSelected(row)">
-          </mat-checkbox>
+        <th>Account Name</th>
+        <th>Account Code</th>
+        <th>Bank Name</th>
+        <th>Journal Account Code</th>
+        <th>Journal Account Name</th>
+        <th style="width: 200px">Image</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-bank>
+      <tr>
+        <td *ngIf="useCheckbox">
+          <p-tableCheckbox [value]="bank"></p-tableCheckbox>
         </td>
-      </ng-container>
-
-      <!-- Code Column -->
-      <ng-container matColumnDef="accountName">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.accountName }}</td>
-      </ng-container>
-
-      <!-- Name Column -->
-      <ng-container matColumnDef="accountNo">
-        <th mat-header-cell *matHeaderCellDef>Account No</th>
-        <td mat-cell *matCellDef="let element">{{ element.accountNo }}</td>
-      </ng-container>
-
-      <!-- Balance Column -->
-      <ng-container matColumnDef="bankName">
-        <th mat-header-cell *matHeaderCellDef>Bank Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.bankName }}</td>
-      </ng-container>
-
-      <!-- Point Reward Column -->
-      <ng-container matColumnDef="journalAccountCode">
-        <th mat-header-cell *matHeaderCellDef>Journal Accouont Code</th>
-        <td mat-cell *matCellDef="let element">{{ element.journalAccountCode }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="journalAccountName">
-        <th mat-header-cell *matHeaderCellDef>Journal Accouont Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.journalAccountName }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="imageUrl">
-        <th mat-header-cell *matHeaderCellDef>Image</th>
-        <td mat-cell *matCellDef="let element">
-          <img src="{{ element.imageUrl }}" alt="img" style="max-width: 100%; height: 60px" />
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-
-    <mat-paginator
-      [pageSizeOptions]="[5, 10, 20]"
-      showFirstLastButtons
-      aria-label="Select page of periodic elements">
-    </mat-paginator>
-  </div>
+        <td>{{ bank.accountName }}</td>
+        <td>{{ bank.accountNo }}</td>
+        <td>{{ bank.bankName }}</td>
+        <td>{{ bank.journalAccountCode }}</td>
+        <td>{{ bank.journalAccountName }}</td>
+        <td><img src="{{ bank.imageUrl }}" style="max-width: 100%; max-height: 70px" /></td>
+      </tr>
+    </ng-template>
+  </p-table>
 </div>
