--- a/src/app/views/category/category.component.html
+++ b/src/app/views/category/category.component.html
@@ -2,9 +2,10 @@
   <h1>Category</h1>
 
   <div class="menu-list">
-    <div class="row row-cols-md-5 g-2 g-lg-3 p-3">
-      <div class="col" *ngFor="let item of menus">
+    <div class="flex flex-wrap">
+      <div class="justify-content-center my-2" *ngFor="let item of menus">
         <app-card-menu
+          class="flex justify-content-center"
           [icon]="item.icon"
           [title]="item.title"
           [desc]="item.description"
