customer checkpoint with return http error 400

--- a/src/app/views/category/bp-group/bp-group.component.html
+++ b/src/app/views/category/bp-group/bp-group.component.html
@@ -1,7 +1,7 @@
 <div class="card flex justify-content-center flex-column p-3">
-  <h1>Business Partner</h1>
+  <h1>Business Partner Group</h1>
 
-  <p>Business Partner data from Subur Database</p>
+  <p>Business Partner Group data from Subur Database</p>
 
   <div class="d-flex flex-row align-items-center mb-2">
     <p-button label="Load Data" (onClick)="loadData()" severity="success" class="me-2"></p-button>
