--- a/src/app/views/category/customer/customer.component.html
+++ b/src/app/views/category/customer/customer.component.html
@@ -1,136 +1,75 @@
-<div class="container-fluid">
+<div class="card flex justify-content-center flex-column p-3">
   <h1>Customer</h1>
 
   <p>Customer data from Subur Database</p>
 
-  <div class="d-flex flex-row align-items-center">
-    <mat-form-field>
-      <mat-label>Source Branch</mat-label>
-      <mat-select [(value)]="selectedBranch">
-        <mat-option>None</mat-option>
-        <mat-option value="item" *ngFor="let item of branchList">{{ item.value }}</mat-option>
-      </mat-select>
-    </mat-form-field>
-    <mat-form-field class="ms-3">
-      <mat-label>Destination Branch</mat-label>
-      <mat-select [(value)]="branchDestination">
-        <mat-option>None</mat-option>
-        <mat-option value="item" *ngFor="let item of branchList">{{ item.value }}</mat-option>
-      </mat-select>
-    </mat-form-field>
-    <button
-      mat-raised-button
-      color="primary"
-      style="margin-bottom: 22px"
-      class="ms-3"
-      [disabled]="selectedBranch == null || branchDestination == null">
-      Submit
-    </button>
+  <div class="d-flex flex-row align-items-center mb-2">
+    <p-button label="Load Data" (onClick)="loadData()" severity="success" class="me-2"></p-button>
+    <p-toast></p-toast>
+    <p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
+    <p-button label="Submit" (onClick)="confirmDialog()" [disabled]="buttonDisabled"></p-button>
   </div>
 
-  <mat-slide-toggle class="mb-4" [(ngModel)]="useCheckbox" (change)="onSlideChange()"
-    >Use Checkbox ?</mat-slide-toggle
-  >
-
-  <div class="mat-elevation-z3">
-    <table mat-table [dataSource]="dataSource">
-      <ng-container matColumnDef="select">
-        <th mat-header-cell *matHeaderCellDef>
-          <mat-checkbox
-            (change)="$event ? toggleAllRows() : null"
-            [checked]="selectedData.hasValue() && isAllSelected()"
-            [indeterminate]="selectedData.hasValue() && !isAllSelected()">
-          </mat-checkbox>
+  <p-table
+    [loading]="loading"
+    [value]="dataSource"
+    [(selection)]="selectedData"
+    (onHeaderCheckboxToggle)="selectAllChange()"
+    (selectAllChange)="selectAllChange()"
+    (selectionChange)="selectChange()"
+    dataKey="code"
+    [paginator]="true"
+    [showCurrentPageReport]="true"
+    [tableStyle]="{ 'min-width': '50rem' }"
+    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+    (onPage)="onPageChange($event)"
+    [rows]="10"
+    [rowsPerPageOptions]="[10, 20, 30, 50, 80, 100]">
+    <ng-template pTemplate="header">
+      <tr>
+        <th style="width: 4rem" *ngIf="useCheckbox">
+          <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
         </th>
-        <td mat-cell *matCellDef="let row">
-          <mat-checkbox
-            (click)="$event.stopPropagation()"
-            (change)="toggleRow($event, row)"
-            [checked]="selectedData.isSelected(row)">
-          </mat-checkbox>
+        <th>Code</th>
+        <th>Description</th>
+        <th>Group Type</th>
+        <th>Salt</th>
+        <th>PIN</th>
+        <th>Email</th>
+        <th>Outstanding Bills</th>
+        <th>Payment Day</th>
+        <th>Limit Type</th>
+        <th style="min-width: 150px">NIK</th>
+        <th>Display Membership</th>
+        <th>Bar Code</th>
+        <th>Delivery Days</th>
+        <th>Fees Rokok</th>
+        <th>Fees non Rokok</th>
+        <th style="min-width: 150px">Salesman NIK</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-customer>
+      <tr>
+        <td *ngIf="useCheckbox">
+          <p-tableCheckbox [value]="customer"></p-tableCheckbox>
         </td>
-      </ng-container>
-
-      <!-- Code Column -->
-      <ng-container matColumnDef="code">
-        <th mat-header-cell *matHeaderCellDef>Code</th>
-        <td mat-cell *matCellDef="let element">{{ element.code }}</td>
-      </ng-container>
-
-      <!-- Name Column -->
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef>Description</th>
-        <td mat-cell *matCellDef="let element">{{ element.description }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="groupType">
-        <th mat-header-cell *matHeaderCellDef>Group Type</th>
-        <td mat-cell *matCellDef="let element">{{ element.groupType }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="emailAddress">
-        <th mat-header-cell *matHeaderCellDef>Email Address</th>
-        <td mat-cell *matCellDef="let element">{{ element.emailAddress }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="outstandingBills">
-        <th mat-header-cell *matHeaderCellDef>Outstanding Bills</th>
-        <td mat-cell *matCellDef="let element">{{ element.outstandingBills }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="paymentDays">
-        <th mat-header-cell *matHeaderCellDef>Payment Days</th>
-        <td mat-cell *matCellDef="let element">{{ element.paymentDays }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="limitType">
-        <th mat-header-cell *matHeaderCellDef>Limit Type</th>
-        <td mat-cell *matCellDef="let element">{{ element.limitType }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="nIK">
-        <th mat-header-cell *matHeaderCellDef>NIK</th>
-        <td mat-cell *matCellDef="let element">{{ element.nIK }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="displayMembership">
-        <th mat-header-cell *matHeaderCellDef>Membership</th>
-        <td mat-cell *matCellDef="let element">{{ element.displayMembership }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="membershipBarCode">
-        <th mat-header-cell *matHeaderCellDef>Bar Code</th>
-        <td mat-cell *matCellDef="let element">{{ element.membershipBarCode }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="deliveryDays">
-        <th mat-header-cell *matHeaderCellDef>Delivery Days</th>
-        <td mat-cell *matCellDef="let element">{{ element.deliveryDays }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="feesRokok">
-        <th mat-header-cell *matHeaderCellDef>Fees Rokok</th>
-        <td mat-cell *matCellDef="let element">{{ element.feesRokok }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="feesNonRokok">
-        <th mat-header-cell *matHeaderCellDef>Fees Non Rokok</th>
-        <td mat-cell *matCellDef="let element">{{ element.feesNonRokok }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="salesmanNIK">
-        <th mat-header-cell *matHeaderCellDef>Salesman NIK</th>
-        <td mat-cell *matCellDef="let element">{{ element.salesmanNIK }}</td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-
-    <mat-paginator
-      [pageSizeOptions]="[5, 10, 20]"
-      showFirstLastButtons
-      aria-label="Select page of periodic elements">
-    </mat-paginator>
-  </div>
+        <td>{{ customer.code }}</td>
+        <td>{{ customer.description }}</td>
+        <td>{{ customer.groupType }}</td>
+        <td>{{ customer.salt }}</td>
+        <td>{{ customer.pIN }}</td>
+        <td>{{ customer.emailAddress }}</td>
+        <td>{{ customer.outstandingBills }}</td>
+        <td>{{ customer.paymentDays }}</td>
+        <td>{{ customer.limitType }}</td>
+        <td>{{ customer.nIK }}</td>
+        <td>{{ customer.displayMembership }}</td>
+        <td>{{ customer.membershipBarCode }}</td>
+        <td>{{ customer.deliveryDays }}</td>
+        <td>{{ customer.feesRokok }}</td>
+        <td>{{ customer.feesNonRokok }}</td>
+        <td>{{ customer.salesmanNIK }}</td>
+      </tr>
+    </ng-template>
+  </p-table>
 </div>
